# philharmonic-workspace

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .mcp.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  HUMANS.md  POSIX_CHECKLIST.md  README.md  ROADMAP.md  book.toml  deny.toml  docker-compose.override.yml.example  docker-compose.yml
.cargo/: config.toml
.claude/: settings.json
.claude/hooks/: calendar-jp-grounding.sh
.codex/: config.toml
.githooks/: commit-msg  post-commit  pre-commit  pre-push
.github/workflows/: ci.yml  mdbook.yml
.init/: init.sh
archives/: README.md
bins/mechanics-worker/: Cargo.toml
bins/mechanics-worker/src/: config.rs  main.rs
bins/mechanics-worker/tests/: metrics_endpoint.rs
bins/philharmonic-api-server/: Cargo.toml  build.rs
bins/philharmonic-api-server/src/: config.rs  embed_job.rs  embed_script.js  executor.rs  lowerer.rs  main.rs  scope.rs  security_headers.rs  webui.rs
bins/philharmonic-chat/: Cargo.toml  README.md  build.rs
bins/philharmonic-chat/frontend/: package-lock.json  package.json  tsconfig.json  webpack.config.js
bins/philharmonic-chat/frontend/src/: App.tsx  app.css  global.d.ts  index.html  index.tsx
bins/philharmonic-chat/frontend/src/api/: client.ts
bins/philharmonic-chat/frontend/src/components/: AgentNamePrompt.tsx  BrandHeader.tsx  ChatPanel.tsx  Modal.tsx  VersionRefresh.tsx
bins/philharmonic-chat/frontend/src/hooks/: usePoll.ts  useT.ts
bins/philharmonic-chat/frontend/src/i18n/: en.ts  index.ts  ja.ts
bins/philharmonic-chat/frontend/src/pages/: Awaiting.tsx  ChatTranscript.tsx  MockTest.tsx  SignIn.tsx
bins/philharmonic-chat/frontend/src/store/: authSlice.ts  brandingSlice.ts  i18nSlice.ts  index.ts  notifySlice.ts
bins/philharmonic-chat/frontend/src/util/: formatTimestamp.ts  notificationSound.ts
bins/philharmonic-chat/src/: config.rs  error.rs  main.rs  mint.rs  routes.rs  static_assets.rs
bins/philharmonic-connector/: Cargo.toml
bins/philharmonic-connector/src/: config.rs  main.rs
deploy/: api.toml  connector.toml  mechanics.toml
docs/: 00-index.md  00-overview.md  01-principles.md  01-project-overview.md  02-00-components.md  02-01-cornerstone.md  02-02-storage.md  02-03-execution.md  02-05-workflow.md  02-design-principles.md  03-boundaries.md  04-cornerstone-vocabulary.md  04-deferred.md  05-conventions.md  07-workflow-orchestration.md  10-api-layer.md  11-security-and-cryptography.md  14-open-questions.md  15-v1-scope.md  POSIX_CHECKLIST.md  README.md  ROADMAP.md  SUMMARY.md  index.md  stats-cache.tsv
docs/archive/: 2026-05-10-readme-roadmap-trim.md  2026-05-11-roadmap-completed-arc-trim.md  2026-05-12-roadmap-d17-done-d7-spec-d18-added.md  2026-05-13-roadmap-d20-done.md  2026-05-13-roadmap-d23-d25-done.md  2026-05-14-roadmap-d24-done.md  2026-05-15-roadmap-audit-refactor-slices-1-2.md  2026-05-15-roadmap-l-d26-done.md  README.md
docs/codex-prompts/: 2026-04-20-phase-1-mechanics-config-extraction-01.md  2026-04-20-phase-1-mechanics-config-extraction-02.md  2026-04-21-0001-phase-2-wave-1-non-crypto-foundation.md  2026-04-21-0002-phase-2-wave-2-crypto-foundation.md  2026-04-22-0001-philharmonic-policy-auth-boundary-hardening.md  2026-04-22-0002-phase-3-connector-common.md  2026-04-22-0003-phase-4-workflow.md  2026-04-22-0004-phase-5-wave-a-cose-sign1-tokens.md  2026-04-22-0005-phase-5-wave-b-hybrid-kem-cose-encrypt0.md  2026-04-23-0001-phase-5-wave-b-zeroization-followup.md  2026-04-24-0001-phase-6-http-forward.md  2026-04-24-0002-phase-6-llm-openai-compat-02.md  2026-04-24-0002-phase-6-llm-openai-compat.md  2026-04-24-0003-phase-7-sql-postgres.md  2026-04-24-0004-phase-7-sql-mysql.md  2026-04-24-0005-phase-7-embed.md  2026-04-24-0006-phase-7-vector-search.md  2026-04-27-0001-phase-7-embed-tract-03.md  2026-04-27-0001-phase-7-embed-tract.md  2026-04-28-0001-phase-8-sub-phase-a-skeleton.md  2026-04-28-0002-phase-8-sub-phase-b0-ephemeral-api-token-primitives.md  2026-04-28-0003-phase-8-sub-phase-b1-auth-middleware.md  2026-04-28-0004-phase-8-sub-phase-c-authz.md  2026-04-28-0005-phase-8-sub-phase-d-workflow-endpoints.md  2026-04-28-0006-phase-8-sub-phase-e-endpoint-config.md  2026-04-28-0007-phase-8-sub-phase-f-identity-crud.md  2026-04-28-0008-phase-8-sub-phase-g-token-mint.md  2026-04-28-0009-phase-8-sub-phase-h-audit-rate-admin.md  2026-04-29-0001-phase-9-shared-server-infra-01.md  2026-04-29-0002-phase-9-mechanics-worker-bin-01.md  2026-04-29-0003-phase-9-connector-bin-01.md  2026-04-29-0004-phase-9-connector-service-bin-01.md  2026-04-29-0005-phase-9-api-bin-01.md  2026-04-30-0001-phase-9-webui-01.md  2026-04-30-0002-phase-9-e2e-testcontainers-01.md  2026-04-30-0003-phase-9-lowerer-executor-01.md  2026-04-30-0004-phase-9-e2e-full-pipeline-01.md  2026-04-30-0005-phase-9-install-subcommand-01.md  (+47 more)
mechanics-dns/: CHANGELOG.md  Cargo.toml  README.md
mechanics-dns/src/: lib.rs
mechanics-h3-quinn/: .vendor-stamp.toml  Cargo.toml
mechanics-h3-quinn/src/: datagram.rs  lib.rs
philharmonic-virt-detect/: CHANGELOG.md  Cargo.toml  README.md
philharmonic-virt-detect/src/: lib.rs
scripts/: .ci.sh.swp  archive-all.sh  audit-log.sh  backfill-stats.sh  build-status.sh  cargo-audit.sh  cargo-deny.sh  cargo-install.sh  chat-release-build.sh  check-api-breakage.sh  check-detached.sh  check-md-bloat.sh  check-no-registry.sh  check-toolchain.sh  clean-target-debug.sh  codex-logs.sh  codex-status.sh  commit-all.sh  crate-version.sh  crates-io-versions.sh  find-cargo-registry.sh  git-log.sh  heads.sh  hf-fetch-embed-model.sh  log.sh  mdbook-build.sh  miri-test.sh  mktemp.sh  musl-build.sh  new-submodule.sh  philharmonic-chat-build.sh  pre-landing.sh  print-audit-info.sh  project-status.sh  publish-crate.sh  pull-all.sh  push-all.sh  release-build.sh  rust-lint.sh  rust-test.sh  (+13 more)
xtask/: Cargo.toml
xtask/src/: http.rs  lib.rs
xtask/tests/fixtures/detect-virt/docker-on-kvm/proc/1/: environ
xtask/tests/fixtures/detect-virt/vanilla-bare-metal/proc/1/: sched
xtask/tests/fixtures/detect-virt/wsl/proc/sys/kernel/: osrelease
(+235 files in other folders)
