[workspace]
resolver = "3"
members = [
    "philharmonic-types",
    "philharmonic-store",
    "philharmonic-store-sqlx-mysql",
    "mechanics-config",
    "mechanics-core",
    "mechanics",
    "philharmonic",
    "philharmonic-policy",
    "philharmonic-workflow",
    "philharmonic-connector-common",
    "philharmonic-connector-client",
    "philharmonic-connector-router",
    "philharmonic-connector-service",
    "philharmonic-connector-impl-http-forward",
    "philharmonic-connector-impl-llm-openai-compat",
    "philharmonic-connector-impl-llm-anthropic",
    "philharmonic-connector-impl-llm-gemini",
    "philharmonic-connector-impl-sql-postgres",
    "philharmonic-connector-impl-sql-mysql",
    "philharmonic-connector-impl-email-smtp",
    "philharmonic-connector-impl-embed",
    "philharmonic-connector-impl-vector-search",
    "philharmonic-api",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MPL-2.0"
repository = "https://github.com/metastable-void/philharmonic-workspace"
authors = ["metastable-void"]

[workspace.dependencies]
# Third-party
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.11"
coset = "0.4"
ml-kem = "0.2"
x25519-dalek = "2"
aes-gcm = "0.10"
ed25519-dalek = "2"
hkdf = "0.13"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
reqwest = { version = "0.13", features = ["json", "rustls-tls"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls"] }
lettre = "0.11"
thiserror = "2"
async-trait = "0.1"

[patch.crates-io]
philharmonic-types = { path = "philharmonic-types" }
philharmonic-store = { path = "philharmonic-store" }
philharmonic-store-sqlx-mysql = { path = "philharmonic-store-sqlx-mysql" }
mechanics-config = { path = "mechanics-config" }
mechanics-core = { path = "mechanics-core" }
mechanics = { path = "mechanics" }
philharmonic = { path = "philharmonic" }
philharmonic-policy = { path = "philharmonic-policy" }
philharmonic-workflow = { path = "philharmonic-workflow" }
philharmonic-connector-common = { path = "philharmonic-connector-common" }
philharmonic-connector-client = { path = "philharmonic-connector-client" }
philharmonic-connector-router = { path = "philharmonic-connector-router" }
philharmonic-connector-service = { path = "philharmonic-connector-service" }
philharmonic-connector-impl-http-forward = { path = "philharmonic-connector-impl-http-forward" }
philharmonic-connector-impl-llm-openai-compat = { path = "philharmonic-connector-impl-llm-openai-compat" }
philharmonic-connector-impl-llm-anthropic = { path = "philharmonic-connector-impl-llm-anthropic" }
philharmonic-connector-impl-llm-gemini = { path = "philharmonic-connector-impl-llm-gemini" }
philharmonic-connector-impl-sql-postgres = { path = "philharmonic-connector-impl-sql-postgres" }
philharmonic-connector-impl-sql-mysql = { path = "philharmonic-connector-impl-sql-mysql" }
philharmonic-connector-impl-email-smtp = { path = "philharmonic-connector-impl-email-smtp" }
philharmonic-connector-impl-embed = { path = "philharmonic-connector-impl-embed" }
philharmonic-connector-impl-vector-search = { path = "philharmonic-connector-impl-vector-search" }
philharmonic-api = { path = "philharmonic-api" }

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
