[workspace]
resolver = "3"
members = [
    "philharmonic-types",
    "philharmonic-store",
    "philharmonic-store-sqlx-mysql",
    "mechanics-config",
    "mechanics-core",
    "mechanics",
    "philharmonic",
    "philharmonic-policy",
    "philharmonic-workflow",
    "philharmonic-connector-common",
    "philharmonic-connector-client",
    "philharmonic-connector-router",
    "philharmonic-connector-service",
    "philharmonic-connector-impl-http-forward",
    "philharmonic-connector-impl-llm-openai-compat",
    "philharmonic-connector-impl-llm-anthropic",
    "philharmonic-connector-impl-llm-gemini",
    "philharmonic-connector-impl-sql-postgres",
    "philharmonic-connector-impl-sql-mysql",
    "philharmonic-connector-impl-email-smtp",
    "philharmonic-connector-impl-embed",
    "philharmonic-connector-impl-vector-search",
    "philharmonic-api",
    # In-tree (non-submodule) member crates live below. They're
    # workspace dev tooling — never published, never consumed by
    # runtime crates. See `xtask/Cargo.toml` for the current home
    # of such tooling.
    "xtask",
]

[patch.crates-io]
philharmonic-types = { path = "philharmonic-types" }
philharmonic-store = { path = "philharmonic-store" }
philharmonic-store-sqlx-mysql = { path = "philharmonic-store-sqlx-mysql" }
mechanics-config = { path = "mechanics-config" }
mechanics-core = { path = "mechanics-core" }
mechanics = { path = "mechanics" }
philharmonic = { path = "philharmonic" }
philharmonic-policy = { path = "philharmonic-policy" }
philharmonic-workflow = { path = "philharmonic-workflow" }
philharmonic-connector-common = { path = "philharmonic-connector-common" }
philharmonic-connector-client = { path = "philharmonic-connector-client" }
philharmonic-connector-router = { path = "philharmonic-connector-router" }
philharmonic-connector-service = { path = "philharmonic-connector-service" }
philharmonic-connector-impl-http-forward = { path = "philharmonic-connector-impl-http-forward" }
philharmonic-connector-impl-llm-openai-compat = { path = "philharmonic-connector-impl-llm-openai-compat" }
philharmonic-connector-impl-llm-anthropic = { path = "philharmonic-connector-impl-llm-anthropic" }
philharmonic-connector-impl-llm-gemini = { path = "philharmonic-connector-impl-llm-gemini" }
philharmonic-connector-impl-sql-postgres = { path = "philharmonic-connector-impl-sql-postgres" }
philharmonic-connector-impl-sql-mysql = { path = "philharmonic-connector-impl-sql-mysql" }
philharmonic-connector-impl-email-smtp = { path = "philharmonic-connector-impl-email-smtp" }
philharmonic-connector-impl-embed = { path = "philharmonic-connector-impl-embed" }
philharmonic-connector-impl-vector-search = { path = "philharmonic-connector-impl-vector-search" }
philharmonic-api = { path = "philharmonic-api" }

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

# Abort on panic instead of unwinding. Smaller binary, faster, and removes
# an entire class of attack surface (unwind-based exploits). Only downside:
# you lose `catch_unwind`, which most code shouldn't be using anyway.
panic = "abort"

# Keep integer-overflow checks on in release. The workspace no-panic rule
# treats unchecked arithmetic as a bug (use `checked_*` / `saturating_*` /
# `wrapping_*` to declare intent); silent wrap in release would mask
# violations. Combined with `panic = "abort"`, unchecked overflow → abort
# rather than silent data corruption.
overflow-checks = true
