[workspace]
resolver = "3"
members = [
    "philharmonic-types",
    "philharmonic-store",
    "philharmonic-store-sqlx-mysql",
    "mechanics-config",
    "mechanics-core",
    "mechanics",
    "mechanics-http-client",
    "mechanics-h3-quinn",
    "philharmonic",
    "philharmonic-policy",
    "philharmonic-workflow",
    "philharmonic-connector-common",
    "philharmonic-connector-client",
    "philharmonic-connector-router",
    "philharmonic-connector-service",
    "philharmonic-connector-impl-api",
    "philharmonic-connector-impl-http-forward",
    "philharmonic-connector-impl-llm-openai-compat",
    "philharmonic-connector-impl-llm-anthropic",
    "philharmonic-connector-impl-llm-gemini",
    "philharmonic-connector-impl-sql-postgres",
    "philharmonic-connector-impl-sql-mysql",
    "philharmonic-connector-impl-dns",
    "philharmonic-connector-impl-email-smtp",
    "philharmonic-connector-impl-embed",
    "philharmonic-connector-impl-vector-search",
    "philharmonic-api",
    "inline-blob",
    "mechanics-http-server",
    "dockerlet",
    # In-tree (non-submodule) member crates live below. Two
    # sub-categories:
    # (a) workspace dev tooling / deployment bins — never
    #     published. `xtask` and the three `bins/*` crates.
    # (b) published runtime crates that live in-tree rather
    #     than as a git submodule to skip submodule lifecycle
    #     overhead. Precedent: `mechanics-h3-quinn` (listed
    #     above among submodule members for grouping; in-tree
    #     non-submodule + published, maintained via the
    #     `vendor-upstream` xtask). Planned: `mechanics-dns`
    #     (ROADMAP §3.L / D26).
    "bins/mechanics-worker",
    "bins/philharmonic-connector",
    "bins/philharmonic-api-server",
    "xtask",
]

[patch.crates-io]
philharmonic-types = { path = "philharmonic-types" }
philharmonic-store = { path = "philharmonic-store" }
philharmonic-store-sqlx-mysql = { path = "philharmonic-store-sqlx-mysql" }
mechanics-config = { path = "mechanics-config" }
mechanics-core = { path = "mechanics-core" }
mechanics = { path = "mechanics" }
philharmonic = { path = "philharmonic" }
philharmonic-policy = { path = "philharmonic-policy" }
philharmonic-workflow = { path = "philharmonic-workflow" }
philharmonic-connector-common = { path = "philharmonic-connector-common" }
philharmonic-connector-client = { path = "philharmonic-connector-client" }
philharmonic-connector-router = { path = "philharmonic-connector-router" }
philharmonic-connector-service = { path = "philharmonic-connector-service" }
philharmonic-connector-impl-http-forward = { path = "philharmonic-connector-impl-http-forward" }
philharmonic-connector-impl-llm-openai-compat = { path = "philharmonic-connector-impl-llm-openai-compat" }
philharmonic-connector-impl-llm-anthropic = { path = "philharmonic-connector-impl-llm-anthropic" }
philharmonic-connector-impl-llm-gemini = { path = "philharmonic-connector-impl-llm-gemini" }
philharmonic-connector-impl-sql-postgres = { path = "philharmonic-connector-impl-sql-postgres" }
philharmonic-connector-impl-sql-mysql = { path = "philharmonic-connector-impl-sql-mysql" }
philharmonic-connector-impl-email-smtp = { path = "philharmonic-connector-impl-email-smtp" }
philharmonic-connector-impl-embed = { path = "philharmonic-connector-impl-embed" }
philharmonic-connector-impl-vector-search = { path = "philharmonic-connector-impl-vector-search" }
philharmonic-api = { path = "philharmonic-api" }
philharmonic-connector-impl-api = { path = "philharmonic-connector-impl-api" }
inline-blob = { path = "inline-blob" }
philharmonic-connector-impl-dns = { path = "philharmonic-connector-impl-dns" }
mechanics-http-client = { path = "mechanics-http-client" }
mechanics-h3-quinn = { path = "mechanics-h3-quinn" }
mechanics-http-server = { path = "mechanics-http-server" }
dockerlet = { path = "dockerlet" }

[profile.dev]
# Disable incremental compilation in debug builds. Incremental
# state in `target-main/debug/incremental/` accretes per-crate
# graph fragments + many small per-query files; on this
# workspace (~33 crates, heavy deps via tract/sqlx/axum/boa) it
# materially worsens /tmp tmpfs pressure when `target-main` is
# the RAM-backed symlink (see `scripts/lib/cargo-target-dir.sh`)
# and slows down `target-main/debug` cleanups. The cost of
# disabling is full re-compile on every dep-graph change; on
# CI/pre-landing that's already the norm, and on local dev the
# cargo build cache + sccache (if configured) cover the common
# unchanged-rebuild path.
incremental = false

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

# Abort on panic instead of unwinding. Smaller binary, faster, and removes
# an entire class of attack surface (unwind-based exploits). Only downside:
# you lose `catch_unwind`, which most code shouldn't be using anyway.
panic = "abort"

# Keep integer-overflow checks on in release. The workspace no-panic rule
# treats unchecked arithmetic as a bug (use `checked_*` / `saturating_*` /
# `wrapping_*` to declare intent); silent wrap in release would mask
# violations. Combined with `panic = "abort"`, unchecked overflow → abort
# rather than silent data corruption.
overflow-checks = true
