[package]
name = "philharmonic-virt-detect"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["metastable-void"]
description = "systemd-detect-virt(1)-style virtualization / container probe. Single never-fail public function returns the detected ID (kvm, docker, wsl, etc.) or \"none\" on any error."
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
repository = "https://github.com/metastable-void/philharmonic-workspace"
homepage = "https://github.com/metastable-void/philharmonic-workspace"
keywords = ["virtualization", "container", "detect-virt", "systemd", "philharmonic"]
categories = ["os", "no-std"]

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
raw-cpuid = { version = "11", default-features = false, features = ["std"] }

[profile.release]
opt-level = 3
