[package]
name = "xtask"
version = "0.0.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0 OR MPL-2.0"
description = "In-tree workspace dev tooling for philharmonic-workspace. Not published — `publish = false`. Multi-bin: each `src/bin/*.rs` is a separate tool. See `CONTRIBUTING.md §8 In-tree workspace tooling` for when to add a bin here vs. extending a shell script in `scripts/`, and §8.1 for the separate `target-xtask/` target dir used by the `scripts/xtask.sh` wrapper."
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = "0.10"
yasumi = "0.2"
anyhow = "1"
sha2 = "0.10"
sysinfo = "0.38"
tokei = "14"
tar = "0.4"
flate2 = "1"
zstd = { version = "0.13", features = ["zstdmt"] }
poloto = "19"
tagu = "0.1"

# Used only by `xtask/src/bin/detect-virt.rs`'s CPUID-based VM
# probe; gated to x86 / x86_64 targets so non-x86 build hosts
# (aarch64 musl, ppc64le, etc.) don't pull or compile it. The
# `mod cpuid` block in detect-virt.rs is gated identically; on
# non-x86 it returns `None` immediately and never references
# any `raw_cpuid::*` symbol.
[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
raw-cpuid = "11"
