[package]
name = "xtask"
version = "0.0.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0 OR MPL-2.0"
description = "In-tree workspace dev tooling for philharmonic-workspace. Not published — `publish = false`. Multi-bin: each `src/bin/*.rs` is a separate tool. See `CONTRIBUTING.md §8 In-tree workspace tooling` for when to add a bin here vs. extending a shell script in `scripts/`, and §8.1 for the separate `target-xtask/` target dir used by the `scripts/xtask.sh` wrapper."
publish = false

[dependencies]
clap = { version = "4", default-features = false, features = ["color", "derive", "error-context", "help", "std", "suggestions", "usage"] }
uuid = { version = "1", default-features = false, features = ["std", "v4"] }
serde = { version = "1", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
toml = { version = "0.8", default-features = false, features = ["display", "parse"] }
ureq = { version = "3", default-features = false, features = ["rustls-no-provider", "rustls-webpki-roots", "gzip"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "aws_lc_rs"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = { version = "0.10", default-features = false, features = ["std"] }
yasumi = { version = "0.2", default-features = false, features = [] }
anyhow = { version = "1", default-features = false, features = ["std"] }
sha2 = { version = "0.10", default-features = false, features = ["std"] }
sysinfo = { version = "0.38", default-features = false, features = ["system"] }
tokei = { version = "14", default-features = false, features = [] }
tar = { version = "0.4", default-features = false, features = [] }
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
zstd = { version = "0.13", default-features = false, features = ["arrays", "legacy", "zdict_builder", "zstdmt"] }
poloto = { version = "19", default-features = false, features = [] }
tagu = { version = "0.1", default-features = false, features = [] }

# Used only by `xtask/src/bin/detect-virt.rs`'s CPUID-based VM
# probe; gated to x86 / x86_64 targets so non-x86 build hosts
# (aarch64 musl, ppc64le, etc.) don't pull or compile it. The
# `mod cpuid` block in detect-virt.rs is gated identically; on
# non-x86 it returns `None` immediately and never references
# any `raw_cpuid::*` symbol.
[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
raw-cpuid = { version = "11", default-features = false, features = ["std"] }
