[package]
name = "mechanics-worker"
version = "0.0.0"
edition = "2024"
rust-version = "1.88"
publish = false

[dependencies]
philharmonic = { path = "../../philharmonic", default-features = false, features = ["mechanics"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"

[features]
default = []
https = ["philharmonic/https"]
