[package]
name = "mechanics-worker"
version = "0.0.0"
edition = "2024"
rust-version = "1.88"
publish = false

[dependencies]
philharmonic = { path = "../../philharmonic", default-features = false, features = ["mechanics"] }
clap = { version = "4", default-features = false, features = ["color", "derive", "error-context", "help", "std", "suggestions", "usage"] }
serde = { version = "1", default-features = false, features = ["derive", "std"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
toml = { version = "0.8", default-features = false, features = ["display", "parse"] }

[features]
# Default-on so `cargo check --workspace` (and pre-landing.sh)
# compiles the `#[cfg(feature = "https")]` HTTPS / HTTP/3 code
# path. Release builds keep https on; testing flows that don't
# need TLS can `--no-default-features`.
default = ["https"]
https = ["philharmonic/https"]
