[package]
name = "philharmonic-api-server"
version = "0.0.0"
edition = "2024"
rust-version = "1.88"
publish = false

[[bin]]
name = "philharmonic-api"
path = "src/main.rs"

[dependencies]
philharmonic = { path = "../../philharmonic", default-features = false, features = [
    "api",
    "connector-client",
    "connector-common",
    "connector-router",
    "policy",
    "store",
    "store-sqlx-mysql",
    "types",
    "webui",
    "workflow",
] }
async-trait = { version = "0.1", default-features = false, features = [] }
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio"] }
clap = { version = "4", default-features = false, features = ["color", "derive", "error-context", "help", "std", "suggestions", "usage"] }
coset = { version = "0.4", default-features = false, features = [] }
hex = { version = "0.4", default-features = false, features = ["std"] }
http = { version = "1", default-features = false, features = ["std"] }
hyper-util = { version = "0.1", default-features = false, features = ["http1", "http2", "server", "tokio"] }
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
mechanics-http-client = { version = "0.2", default-features = false, features = ["http3"] } # kept: preserves opportunistic HTTP/3 endpoint transport.
mechanics-http-server = { version = "0.1", default-features = false, optional = true }
serde = { version = "1", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
sqlx = { version = "0.8", default-features = false, features = ["mysql", "runtime-tokio"] }
tokio = { version = "1", default-features = false, features = ["macros", "net", "rt-multi-thread", "sync"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["aws_lc_rs", "logging", "tls12"], optional = true } # kept: trimming pulls ring via rustls provider default.
toml = { version = "0.8", default-features = false, features = ["display", "parse"] }
tower = { version = "0.5", default-features = false, features = ["util"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
zeroize = { version = "1", default-features = false, features = ["alloc", "derive"] }

[features]
# Default-on so `cargo check --workspace` (and pre-landing.sh)
# compiles the `#[cfg(feature = "https")]` HTTPS / HTTP/3 code
# path. Release builds keep https on; testing flows that don't
# need TLS can `--no-default-features`. The bin uses
# `mechanics-http-server` (mhs) directly for the H3 listener
# and `mechanics-http-client` (mhc) for outbound calls to
# `mechanics-worker`; it does NOT use the `mechanics` Rust
# crate, so the `https` feature doesn't pull `philharmonic/https`
# (which would drag in the `mechanics` re-export tree
# unnecessarily).
default = ["https"]
https = ["dep:mechanics-http-server", "dep:tokio-rustls"]
