[package]
name = "philharmonic-chat"
version = "0.0.0"
edition = "2024"
rust-version = "1.88"
publish = false

[dependencies]
clap = { version = "4", default-features = false, features = ["color", "derive", "error-context", "help", "std", "suggestions", "usage"] }
serde = { version = "1", default-features = false, features = ["derive", "std"] }
toml = { version = "0.8", default-features = false, features = ["display", "parse"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
